Change color of top container

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ h1{
     margin-bottom: 0;
 }
 .top-container{
-    background-color: #E1578A;
+    background-color: #C8E3D4;
 }
 
 .middle-container{
