--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body{
 }
 
 h1{
+    font-size: 90px;
     margin-top: 0;
     font-family: 'Sacramento', cursive;
 }
@@ -27,15 +28,17 @@ to the div and not the body*/
 }
 
 .middle-container{
-    background-color: red;
-    height: 200px;
-    width: 200px;
+    
 }
 
 .bottom-container{
-    background-color: blue;
-    height: 200px;
-    width: 200px;
+    
+}
+
+.luke-pfp{
+    max-width: 200px;
+    height: auto;
+    border-radius: 50%;
 }
 
 .pro{
