--- a/css/styles.css
+++ b/css/styles.css
@@ -5,17 +5,21 @@ body{
 }
 
 h1{
-    font-size: 90px;
-    margin-top: 0;
+    font-size: 5.625rem;
+    margin: 50px auto 0 auto;
     font-family: 'Sacramento', cursive;
+    color: #66BFBF;
 }
 
 h2{
     font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    color: #66BFBF;
 }
 
 h3{
     font-family: 'Montserrat', sans-serif;
+    color: #66BFBF;
 }
 
 /*Top container is relative because we want 
@@ -35,6 +39,17 @@ to the div and not the body*/
     
 }
 
+.skill-row{
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+    line-height: 2;
+}
+
+.footer-link{
+    color: #66BFBF;
+}
+
 .luke-pfp{
     max-width: 200px;
     height: auto;
@@ -42,7 +57,12 @@ to the div and not the body*/
 }
 
 .pro{
-    text-decoration: underline black;
+    text-decoration: underline #66BFBF;
+    font-weight: normal;
+}
+
+.pro2{
+    font-weight: normal;
 }
 
 .top-cloud{
@@ -55,4 +75,17 @@ to the div and not the body*/
     position: absolute;
     left: 300px;
     bottom: 300px;
+}
+
+.cloud-computing-pic{
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+
+.gaming-pic{
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+    
 }
