--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ to the div and not the body*/
     max-width: 200px;
     height: auto;
     border-radius: 50%;
+    margin-top: 100px;
 }
 
 .pro{
@@ -77,6 +78,15 @@ to the div and not the body*/
     bottom: 300px;
 }
 
+hr{
+    border-color: #C8C6C6;
+    border-style: dotted none none;
+    height: 0px;
+    border-width: 5px;
+    width: 5%;
+    margin: 100px auto 100px auto;
+}
+
 .cloud-computing-pic{
     width: 25%;
     float: left;
@@ -90,8 +100,14 @@ to the div and not the body*/
 
 }
 
+.pfp-text{
+    margin: auto 80px auto 80px;
+    padding-left: 25%;
+    padding-right: 25%;
+}
+
 .cloud-text{
-    clear: left;
+    float: left
 }
 
 .gaming-text{
