--- a/css/styles.css
+++ b/css/styles.css
@@ -19,14 +19,23 @@ h2{
 
 h3{
     font-family: 'Montserrat', sans-serif;
-    color: #66BFBF;
+    color: #11999E;
+}
+
+hr{
+    border-color: #C8C6C6;
+    border-style: dotted none none;
+    height: 0px;
+    border-width: 5px;
+    width: 5%;
+    margin: 100px auto 100px auto;
 }
 
 /*Top container is relative because we want 
 the bottom cloud positoining to be relative 
 to the div and not the body*/
 .top-container{
-    background-color: #C8E3D4;
+    background-color: #EAF6F6;
     position: relative;
     padding-top: 100px;
 }
@@ -41,7 +50,7 @@ to the div and not the body*/
 
 .skill-row{
     width: 50%;
-    margin: 100px auto 100px auto;
+    margin: 100px auto 200px auto;
     text-align: left;
     line-height: 2;
 }
@@ -78,14 +87,6 @@ to the div and not the body*/
     bottom: 300px;
 }
 
-hr{
-    border-color: #C8C6C6;
-    border-style: dotted none none;
-    height: 0px;
-    border-width: 5px;
-    width: 5%;
-    margin: 100px auto 100px auto;
-}
 
 .cloud-computing-pic{
     width: 25%;
@@ -106,10 +107,6 @@ hr{
     padding-right: 25%;
 }
 
-.cloud-text{
-    float: left
-}
-
-.gaming-text{
-    clear: right
+.contact-text{
+    padding: auto 25% auto 25%;
 }
